removal of emojis index.html

--- a/index.html
+++ b/index.html
@@ -374,19 +374,19 @@
             <p class="section-subtitle">Professional qualifications backed by hands-on engineering experience</p>
             <div class="cred-grid">
                 <div class="cred-item">
-                    <h4>📜 Degree</h4>
+                    <h4>Degree</h4>
                     <p>Electronic Engineering Technologies</p>
                 </div>
                 <div class="cred-item">
-                    <h4>⚙️ Certificate</h4>
+                    <h4>Certificate</h4>
                     <p>Basic Electronics</p>
                 </div>
                 <div class="cred-item">
-                    <h4>🔌 Certificate</h4>
+                    <h4>Certificate</h4>
                     <p>Electronic Assembly</p>
                 </div>
                 <div class="cred-item">
-                    <h4>🤖 Certificate</h4>
+                    <h4>Certificate</h4>
                     <p>Electronic Systems & Automation</p>
                 </div>
             </div>
